--- a/slides.pod
+++ b/slides.pod
@@ -518,7 +518,7 @@ And here is the bass part.
 
 Fretless bass patch on channel zero. Scale pitches in a non-clashing scale.
 
-Next we add four random pitches to the score, for a half-note each.
+Add four random pitches to the score, for a half-note each.
 
 =end note
 
