--- a/slides.pod
+++ b/slides.pod
@@ -403,7 +403,7 @@ App::MusicTools Csound Guitar::Scale MIDI MIDI::Chord::Guitar L<MIDI::Drummer::T
 
 =begin note
 
-The linked modules are those mentioned in this presentation.
+Linked modules are mentioned in this presentation.
 
 =end note
 
