--- a/slides.pod
+++ b/slides.pod
@@ -424,7 +424,7 @@ $score->write_score("$0.mid");
 
 =begin note
 
-The following sets of slides are complete programs.
+Following slides show complete programs.
 
 1st: score and synchronization.
 
