--- a/slides.pod
+++ b/slides.pod
@@ -670,6 +670,8 @@ Now that I look at it, looks like I could simplify the syntax with a dispatch ta
 
 =head1 Figured Bass Part 1 of 2
 
+Phrase generator for bass rhythmic motifs:
+
 =begin perl
 
 my $mdp = Music::Duration::Partition->new(
@@ -685,7 +687,7 @@ my @motifs = map { $mdp->motif } 1 .. 2;
 
 =begin note
 
-Phrase generator for bass rhythmic motifs
+...
 
 =end note
 
