--- a/slides.pod
+++ b/slides.pod
@@ -670,7 +670,7 @@ Now that I look at it, looks like I could simplify the syntax with a dispatch ta
 
 =head1 Figured Bass Part 1 of 2
 
-Phrase generator for bass rhythmic motifs:
+Phrase generator for rhythmic motifs:
 
 =begin perl
 
