--- a/slides.pod
+++ b/slides.pod
@@ -151,7 +151,7 @@ Term popularized by Brian Eno to describe music that is ever-different, changing
 
 =item *
 
-Generative music is not necessarily algorithmic. For instance, Eno's Music for Airports #2 is actually a physical tape-loop system.
+Generative music is not necessarily algorithmic. For instance, Eno's Music for Airports #2 is actually a physical system of tape-loops.
 
 =back
 
