--- a/slides.pod
+++ b/slides.pod
@@ -10,7 +10,7 @@ Let's talk about music!
 
 The first part will cover often overlapping concepts - which I will whip-though.
 
-Then I will skip the concepts & descripts of the types and techniques,
+Then I will skip the concepts & descriptions of the types and techniques,
 so we can get to the meat of the presentation: actual algorithms.
 
 Also, these slides are live at the link on the bottom of the pages.
