--- a/slides.pod
+++ b/slides.pod
@@ -13,7 +13,8 @@ The first part will cover often overlapping concepts - which I will whip-though.
 Then I will skip the concepts & descriptions of the types and techniques,
 so we can get to the meat of the presentation: actual algorithms.
 
-Also, these slides are live at the link on the bottom of the pages.
+Also, these slides are live at the link on the bottom of the pages,
+if you want to follow along or reread what the hell I just said.
 
 =end note
 
