--- a/slides.pod
+++ b/slides.pod
@@ -412,6 +412,8 @@ Linked modules are mentioned in this presentation.
 
 =head1 Basic Algorithms 1 of 2
 
+# Setup, synch, & write
+
 =begin perl
 
 use MIDI::Util qw(setup_score);
@@ -467,6 +469,8 @@ This is the "proper" way, in terms of CS. But...
 
 =head1 Basic Algorithms 1 of 3
 
+# With filthy globals! Also random pitches
+
 =begin perl
 
 use MIDI::Util qw(setup_score set_chan_patch);
@@ -484,8 +488,6 @@ $score->write_score("$0.mid");
 =end perl
 
 =begin note
-
-Filthy globals!
 
 Music programs are not "mission critical."
 
