--- a/slides.pod
+++ b/slides.pod
@@ -721,9 +721,9 @@ Excellent Music::VoiceGen module by Jeremy Mates (AKA thrig)
 
 =head1 Links
 
-L<This Slideshow|https://ology.net/dev/Perl-Algorithmic-Music/>
-(L<on GitHub|https://github.com/ology/Perl-Algorithmic-Music>
-and L<made with S5|https://metacpan.org/dist/Pod-S5>)
+This Slideshow is
+L<on GitHub|https://github.com/ology/Perl-Algorithmic-Music>
+(and L<made with S5|https://metacpan.org/dist/Pod-S5>)
 
 L<Perl Algorithmic Composition Wiki|https://github.com/ology/MIDI-Perl-HOWTO/wiki>
 
@@ -731,6 +731,7 @@ L<The GrooveTool|https://github.com/ology/Groove-Tool> on GitHub
 
 My experiments with MIDI-Perl L<on GitHub|https://github.com/ology/Music/>
 
-Shameless plug: My L<latest album "XI"|https://ology.net/XI/> is on youtube, spotify, apple music, etc., and includes the partially algorithmic tune, "Permutational." Check it out!
+Shameless plug: My L<latest album "XI"|https://ology.net/XI/> is on youtube, spotify, apple music, etc.,
+and includes the partially algorithmic tune, "Permutational." Check it out!
 
 =cut
