--- a/slides.pod
+++ b/slides.pod
@@ -602,17 +602,17 @@ $score->write_score("$0.mid");
 
 =end note
 
-=head1 GrooveTool
+=head1 Groove-Tool
 
 =over
 
 =item *
 
-Generates combinatorial rhythmic patterns, e.g. Euclidean and Christoffel words
+Generate combinatorial rhythmic patterns, e.g. Euclidean and Christoffel words
 
 =item *
 
-Produces a randomized, figured bass part
+Produce a randomized, figured bass part
 
 =item *
 
@@ -727,7 +727,9 @@ L<on GitHub|https://github.com/ology/Perl-Algorithmic-Music>
 
 L<Perl Algorithmic Composition Wiki|https://github.com/ology/MIDI-Perl-HOWTO/wiki>
 
-L<The GrooveTool|https://github.com/ology/Groove-Tool> on GitHub
+The L<Groove-Tool|https://github.com/ology/Groove-Tool>,
+L<Rock-Tool|https://github.com/ology/Rock-Tool> and
+L<Jazz-Tool|https://github.com/ology/Jazz-Tool> on GitHub
 
 My experiments with MIDI-Perl L<on GitHub|https://github.com/ology/Music/>
 
