--- a/slides.pod
+++ b/slides.pod
@@ -328,14 +328,13 @@ And here is the bass part.
 
 =begin perl
 
-sub treble { my ($score) = @_;
+sub treble {
+    my ($score) = @_;
     set_chan_patch($score, 1, 0);
-
     my @pitches = (
         get_scale_MIDI('C', 4, 'major'),
         get_scale_MIDI('C', 5, 'major'),
     );
-
     for my $n (1 .. 4) {
         my $pitch = $pitches[int rand @pitches];
         $score->n('qn', $pitch);
