--- a/slides.pod
+++ b/slides.pod
@@ -271,7 +271,7 @@ This is the "proper" way, in terms of CS. But...
 
 =begin perl
 
-# With filthy globals! Also random pitches
+# Using random pitches instead of static
 
 use MIDI::Util qw(setup_score set_chan_patch);
 use Music::Scales qw(get_scale_MIDI);
