--- a/slides.pod
+++ b/slides.pod
@@ -244,14 +244,14 @@ Following slides show complete programs.
 sub bass {
     my ($score) = @_;
     for my $note (qw(E2 G2 C3 E4)) {
-        $score->n('wn', $note);
+        $score->n('hn', $note);
     }
 }
 sub treble {
     my ($score) = @_;
     for my $note (qw(E4 E4 F4 G4  G4 F4 E4 D4  C4 C4 D4 E4  E4 D4 D4)) {
-        $score->n('qn', $note);
-        $score->r('qn');
+        $score->n('en', $note);
+        $score->r('en');
     }
 }
 
