--- a/slides.pod
+++ b/slides.pod
@@ -160,13 +160,11 @@ Qualities such as tone, timbre, texture, dynamics, etc. (not easily achieved wit
 
 =item *
 
-"A motif is a brief melodic or rhythmic formula out of which longer passages are developed"
+"A motif is a brief melodic or rhythmic formula out of which longer passages are developed" - More later!
 
 =back
 
 =begin note
-
-"Motif" will be important later...
 
 The concept of "development" is controversial. Some music doesn't develop phrases at all.
 
