--- a/slides.pod
+++ b/slides.pod
@@ -166,7 +166,7 @@ Qualities such as tone, timbre, texture, dynamics, etc. (not easily achieved wit
 
 =begin note
 
-The concept of "development" is controversial. Some music doesn't develop phrases at all.
+The concept of "development" is controversial. Some music doesn't develop phrases at all. Eno? Primus guitar solos?
 
 =end note
 
