--- a/slides.pod
+++ b/slides.pod
@@ -183,7 +183,7 @@ sub treble {
 
 =begin perl
 
-# Using random pitches instead of static
+# Using random instead of static pitches
 
 use MIDI::Util qw(setup_score set_chan_patch);
 use Music::Scales qw(get_scale_MIDI);
