--- a/slides.pod
+++ b/slides.pod
@@ -327,7 +327,7 @@ sub treble {
         get_scale_MIDI('C', 4, 'major'),
         get_scale_MIDI('C', 5, 'major'),
     );
-    for my $n (1 .. 4) {
+    for my $n (1 .. 4 * 8) { # bars * number of bars
         my $pitch = $pitches[int rand @pitches];
         $score->n('qn', $pitch);
         $score->r('qn');
