--- a/slides.pod
+++ b/slides.pod
@@ -427,7 +427,8 @@ my $voice = Music::VoiceGen->new(
     intervals => [qw/-4 -3 -2 2 3 4/],
 );
 
-my @notes1 = map { $voice->rand } $motifs[0]->@*;
+# main phrase notes
+my @voices1 = map { $voice->rand } $motifs[0]->@*;
 
 =end perl
 
@@ -443,11 +444,11 @@ Excellent Music::VoiceGen module by Jeremy Mates (AKA thrig) - I know you're out
 
 for my $i (1 .. $bars) {
     if ($i % 2) {
-        $mdp->add_to_score($self->drummer->score, $motifs[0], \@notes1);
+        $mdp->add_to_score($self->drummer->score, $motifs[0], \@voices1);
     }   
     else {
-        my @notes2 = map { $voice->rand } $motifs[1]->@*;
-        $mdp->add_to_score($self->drummer->score, $motifs[1], \@notes2);
+        my @voices2 = map { $voice->rand } $motifs[1]->@*;
+        $mdp->add_to_score($self->drummer->score, $motifs[1], \@voices2);
     }   
 
     $self->drummer->rest($self->drummer->quarter);
