--- a/slides.pod
+++ b/slides.pod
@@ -116,7 +116,7 @@ How do you structure a tune?
 
 These are the questions we will have to answer if we want to create algorithmic music that follows traditional theory.
 
-If we don't care about traditions, then anything goes!
+If we don't care about traditions, then anything goes! The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar
 
 There are as many answers as there are musicians.
 
