--- a/slides.pod
+++ b/slides.pod
@@ -163,15 +163,14 @@ These slides show complete programs.
 
 sub bass {
     my ($score) = @_;
-    for my $note (qw(C3 E3 G3 C4)) {
-        $score->n('hn', $note);
+    for my $note (qw(C3 E3 C3 G3)) {
+        $score->n('wn', $note);
     }
 }
 sub treble {
     my ($score) = @_;
     for my $note (qw(E4 E4 F4 G4  G4 F4 E4 D4  C4 C4 D4 E4  E4 D4 D4)) {
-        $score->n('en', $note);
-        $score->r('en');
+        $score->n('qn', $note);
     }
 }
 
