--- a/slides.pod
+++ b/slides.pod
@@ -191,11 +191,11 @@ sub treble {
 use MIDI::Util qw(setup_score set_chan_patch);
 use Music::Scales qw(get_scale_MIDI);
 
-my $score = setup_score(bpm => 120, volume => 120);
+my $score = setup_score(bpm => 120);
 $score->synch(
     sub { bass($score) },
     sub { treble($score) },
-) for 1 .. 2;
+) for 1 .. 4;
 
 $score->write_score("$0.mid");
 
@@ -246,7 +246,6 @@ sub treble {
     for my $n (1 .. 4) {
         my $pitch = $pitches[int rand @pitches];
         $score->n('qn', $pitch);
-        $score->r('qn');
     }
 }
 
