--- a/slides.pod
+++ b/slides.pod
@@ -265,15 +265,15 @@ Treble uses two octaves, as opposed to the bass part's one.
 
 # Play a list of named chords held for a whole note each:
 
-use Data::Dumper::Compact qw(ddc);
-use MIDI::Util qw(setup_score midi_format);
+use MIDI::Util qw(setup_score set_chan_patch midi_format);
 use Music::Chord::Note ();
+use Music::Scales qw(get_scale_MIDI);
 
 my $score = setup_score();
 $score->synch(
     sub { chords($score) },
-    sub { treble($score) },
-) for 1 .. 2;
+    #sub { treble($score) },
+);
 
 $score->write_score("$0.mid");
 
@@ -296,35 +296,9 @@ sub chords {
 
     for my $named (qw(Cm7 F7 BbM7 EbM7 Adim7 D7 Gm Cm7)) {
         my @chord = $mcn->chord_with_octave($named, 4);
+        # [ 'C4', 'Ds4', 'G4', 'As4' ], etc.
         @chord = midi_format(@chord);
-        print ddc(\@chord);  # [ 'C4', 'Ds4', 'G4', 'As4' ], etc.
         $score->n('wn', @chord);
-    }
-}
-
-=end perl
-
-=begin note
-
-...
-
-=end note
-
-=head1 Basic Algorithms 3 of 3
-
-=begin perl
-
-sub treble {
-    my ($score) = @_;
-    set_chan_patch($score, 1, 0);
-    my @pitches = (
-        get_scale_MIDI('C', 4, 'major'),
-        get_scale_MIDI('C', 5, 'major'),
-    );
-    for my $n (1 .. 4 * 8) { # bars * number of bars
-        my $pitch = $pitches[int rand @pitches];
-        $score->n('qn', $pitch);
-        $score->r('qn');
     }
 }
 
