--- a/slides.pod
+++ b/slides.pod
@@ -263,7 +263,7 @@ Treble uses two octaves, as opposed to the bass part's one.
 
 =begin perl
 
-# Play a list of named chords held for a whole note each:
+# Play a list of named chords held for a whole note each
 
 use MIDI::Util qw(setup_score set_chan_patch midi_format);
 use Music::Chord::Note ();
