--- a/slides.pod
+++ b/slides.pod
@@ -265,7 +265,7 @@ Treble uses two octaves, as opposed to the bass part's one.
 
 # Play a list of named chords held for a whole note each
 
-use MIDI::Util qw(setup_score set_chan_patch midi_format);
+use MIDI::Util qw(setup_score midi_format);
 use Music::Chord::Note ();
 use Music::Scales qw(get_scale_MIDI);
 
