--- a/slides.pod
+++ b/slides.pod
@@ -366,8 +366,8 @@ my $d = MIDI::Drummer::Tiny->new(
 my $mdp = Music::Duration::Partition->new(
     size    => 3, # number of beats to render
     pool    => [qw(hn dqn qn en)],
-    weights => [ 1, 1, 2, 2 ],
-    groups  => [ 1, 1, 1, 2 ],
+    weights => [ 1, 1, 2, 2 ], # optional
+    groups  => [ 1, 1, 1, 2 ], # optional
 );
 
 my @motifs = $mdp->motifs(2);
